# biosense-twr

./: .gitignore  BENCHMARK.md  PROMPT.md  TRAINNING_OBJECTIVES.md  asknature_TWR_biomimicry_innovation.html
poc/: pyproject.toml
poc/biosense_twr/: __init__.py  checkpoint_manager.py
poc/biosense_twr/inversion/: __init__.py  pose_net.py
poc/biosense_twr/muon_gravity/: __init__.py  gravity_sim.py  muon_sim.py
poc/biosense_twr/signal/: __init__.py  boulic_model.py  radar_echo.py
poc/biosense_twr/simulation/: __init__.py  antenna_array.py  wall_model.py
poc/notebooks/: A100_sim_run.ipynb  biosens_twr.ipynb
poc/rust_kernels/: Cargo.toml
poc/rust_kernels/src/: backprojection.rs  cfar.rs  gravity_inversion.rs  lib.rs  muon_density.rs  wall_correction.rs
