[package]
name = "biosense_rust_kernels"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_kernels"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = { version = "0.21", features = ["nalgebra"] }
nalgebra = "0.32"
rayon = "1.9"
ndarray = { version = "0.15", features = ["rayon"] }
num-complex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
